<resources>
    <string name="app_name">BestPrice</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_home">Home</string>
    <string name="title_zipcode">Welcome</string>
    <string name="title_groceries">Groceries</string>
    <string name="title_orders">Cart</string>
    <string name="title_account">Account</string>

    <string name="produce">Produce</string>
    <string name="meat_seafood">Meat &amp; seafood</string>
    <string name="snacks">Snacks</string>
    <string name="dairy_eggs">Dairy &amp; eggs</string>
    <string name="beverages">Beverages</string>
    <string name="pantry">Pantry</string>
    <string name="categories">All categories</string>
    <string name="popular">Popular items</string>

    <string name="button_home">Create your grocery list</string>
    <string name="home_title1">Find the best price for your groceries.</string>
    <string name="stores_list">Stores near you</string>
    <string name="market_basket">Market Basket</string>
    <string name="wegmans">Wegmans</string>
    <string name="star_market">Star Market</string>
    <string name="stop_shop">Stop &amp; Shop</string>
    <string name="shawns">Shawn\'s</string>
    <string name="americas_food_basket">America\'s Food Basket</string>

    <string name="support">Support Center</string>
    <string name="contact">Contact Us</string>
    <string name="review">Review Best Price in the App Store</string>
    <string name="about">About</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="stores_near">Find stores near you.</string>
    <string name="continue_btn">Continue</string>
    <string name="enter_zip_code">Enter your zip code</string>

    <string name="find_best_price">Find the best price</string>


    <!--    System words-->
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="user_first_name">First Name</string>
    <string name="user_last_name">Last Name</string>

    <string name="create_account">Getting Started</string>
    <string name="create_account_btn">Create Account</string>
    <string name="login">Login</string>
    <string name="Logout">Logout</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="guest">Continue as guest</string>
    <string name="have_account">Login</string>
    <string name="join">Create an Account</string>

    <string name="logo">logo</string>

    <string name="placeholder">placeholder</string>
    <string name="your_name">Your name</string>
    <string name="change_image">Change image</string>


</resources>