<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroceriesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunitobold"
        android:text="@string/title_groceries"
        android:textColor="@color/black"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:text="@string/categories"
        android:textColor="@color/grey"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/productsChip"
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:layout_width="348dp"
        android:layout_height="94dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="180dp"
        app:checkedChip="@id/chip"
        app:chipSpacingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <!-- Chips can be declared here, or added dynamically. -->
        <com.google.android.material.chip.Chip
            android:id="@+id/produce"
            style="@style/Widget.MyApp.Chip.Choice.Active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/produce" />

        <!--            android:checked="true"-->

        <com.google.android.material.chip.Chip
            android:id="@+id/meat"
            style="@style/Widget.MyApp.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meat_seafood" />

        <com.google.android.material.chip.Chip
            android:id="@+id/snacks"
            style="@style/Widget.MyApp.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snacks" />

        <com.google.android.material.chip.Chip
            android:id="@+id/dairy"
            style="@style/Widget.MyApp.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dairy_eggs" />

        <com.google.android.material.chip.Chip
            android:id="@+id/beverages"
            style="@style/Widget.MyApp.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beverages" />

        <com.google.android.material.chip.Chip
            android:id="@+id/pantry"
            style="@style/Widget.MyApp.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pantry" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/popularItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="292dp"
        android:text="@string/popular"
        android:textColor="@color/grey"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/showBasket"
        android:src="@drawable/ic_cart"
        android:tint="@android:color/white"
        android:layout_margin="16dp"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />


</RelativeLayout>