<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/loginAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLoginPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginAppLogo"
        app:startIconDrawable="@drawable/phone"
        android:hint="@string/phone_number"
        android:layout_marginTop="80dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/colorPrimary"
            android:textSize="17sp"
            android:layout_below="@id/loginAppLogo"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLoginPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutLoginPhoneNumber"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/lock"
        android:layout_marginTop="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordInput"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="17sp"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layoutLoginPasswordInput"
        android:layout_marginTop="15dp">

        <CheckBox
            android:id="@+id/rememberMeCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginLeft="17dp"
            />

        <TextView
            android:id="@+id/forgetPasswordLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="110dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/login"
        >

    </com.google.android.material.button.MaterialButton>
</RelativeLayout>