<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logoMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:src="@drawable/logo">

    </androidx.appcompat.widget.AppCompatImageView>

    <TextView
        android:id="@+id/bestPriceDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/nunitobold"
        android:text="Get the best price for your groceries"
        android:textColor="@color/black"
        android:textSize="21dp"
        android:textStyle="bold"
        android:layout_below="@+id/logoMainActivity"
        android:textAlignment="center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/goToLoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="20dp"
        android:textAllCaps="false"
        android:layout_marginTop="100dp"
        android:textSize="18sp"
        android:text="@string/have_account"
        android:layout_below="@+id/bestPriceDeal">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joinNowButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/join"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/goToLoginActivity">
    </com.google.android.material.button.MaterialButton>

<!--    TODO -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:text="@string/guest"
        android:layout_below="@id/joinNowButton">

    </com.google.android.material.button.MaterialButton>


</RelativeLayout>